--- a/Back/package.json
+++ b/Back/package.json
@@ -16,6 +16,7 @@
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.0",
+    "node-cache": "^5.1.2",
     "nodemon": "^2.0.20",
     "npm-check": "^6.0.1",
     "sequelize": "^6.32.1"
