--- a/Back/package.json
+++ b/Back/package.json
@@ -8,6 +8,7 @@
     "start": "node --watch ./bin/www"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "cookie-parser": "~1.4.4",
     "debug": "^4.3.4",
     "ejs": "^3.1.8",
