--- a/Back/package.json
+++ b/Back/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "^4.3.4",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
